<resources>
    <string name="app_name">APK Installer</string>
    <string name="installing">Installing…</string>
    <string name="install">Install</string>
    <string name="parse_apk_failed">Cannot parse apk file :%s</string>
    <string name="install_in_background">Silently Install Under ROOT</string>
    <string name="parsing">Parsing…</string>
    <string name="action_settings">Settings</string>
    <string name="install_failed">%s install failed</string>
    <string name="apk_installed">%s has been installed</string>
    <string name="start_install">Start install %s</string>
    <string name="install_finished_with_result_code">Installation finished with result code %d</string>
    <string name="info_apk_path">APK PATH : </string>
    <string name="info_app_name">APP NAME : </string>
    <string name="info_pkg_name">PKG NAME : </string>
    <string name="info_version">VERSION : </string>
    <string name="info_installed_version">CUR  VER : </string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="back">Back</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="install_silently">Silently</string>
    <string name="unable_to_install_apk">Unable to install apk</string>
    <string name="open_app">OPEN</string>
    <string name="title_progress_failure">Failure</string>
    <string name="title_progress_success">Success</string>
    <string name="summary_auto_delete">Automatically remove the installation package after successful installation</string>
    <string name="title_auto_delete">Auto Delete</string>
    <string name="apk_deleted">%s has been delete</string>
    <string name="app_permissions">APP PERM : (%s)</string>
    <string name="title_show_perm">App Permissions</string>
    <string name="summary_show_perm">Display app permissions list</string>
    <string name="title_perm_color">Permission Text</string>
    <string name="dialog_title_tips">Tips</string>
    <string name="dialog_msg_tips">The APK has been installed on your device. Will you continue to install it?</string>
    <string name="dialog_btn_continue">Continue</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="text_install_complete">Complete</string>
    <string name="title_night_mode">Night mode</string>
    <string name="sub_night_mode">Dark theme</string>
    <string name="text_del_apk">Delete APK</string>
    <string name="text_size">APK Size: :%s</string>
    <string name="text_clean_cache">Clean Cache</string>
    <string name="text_cache_size">Cache Size:</string>
    <string name="clean_complete">Clean complete</string>
    <string name="install_vibrate">Installation completed vibration</string>
    <string name="vibrate">Vibrate</string>
    <string name="dialog_text_title">Tips</string>
    <string name="dialog_text_msg">Msg</string>
    <string name="uninstall">Uninstall</string>
    <string name="dialog_ok">OK</string>
    <string name="low_ver_msg">Installing old version, some devices not support degraded installation, which may cause installation failure!</string>
    <string name="text_low_ver">Low Version</string>
    <string name="text_new_ver">New Version</string>
    <string name="text_equal_ver">Equal Version</string>
    <string name="no_permissions">No Permissions</string>
    <string name="use_system_pkg">Installation failed. Do you want to use the system package installer to install?</string>
    <string name="app_act">APP ACT : (%s)</string>
    <string name="title_show_act">Activity</string>
    <string name="summary_show_act">Show Activity List</string>
    <string name="text_input_sys_pkg">Click to enter the package name of the system package installer</string>
    <string name="text_sys_pkg_tips">Enable when the installer cannot call the system own installer</string>
    <string name="text_hint_input_pkg">Please enter package name</string>
    <string name="text_title_input">Input</string>
    <string name="text_input_empty">Input content is empty</string>
    <string name="dialog_no_longer_prompt">No longer prompt</string>
    <string name="text_apk_source">Source:%s</string>
    <string name="text_apk_source_more">Click to view details</string>
    <string name="text_apk_cache">APK Installation package cache size:%s\nClick please</string>
    <string name="text_apk_cache_complete">Clean up!</string>
    <string name="text_cancel_installation">Cancel</string>
    <string name="text_follow_system">Follow system</string>
    <string name="text_follow_system_sub">Follow system night mode</string>
    <string name="text_settings_version">Version : </string>
    <string name="text_settings_author">Author : TOKYONTH</string>
    <string name="text_settings_pkg">com.android.packageinstaller</string>
    <string name="text_i_know">I Know</string>
    <string name="text_no_description">No corresponding description</string>
    <string name="text_uninstall">Uninstall - %s Mode</string>
    <string name="text_uninstall_btn">Uninstall</string>
    <string name="text_confirm_uninstall_app">Are you sure you want to uninstall %s?</string>
    <string name="text_uninstall_complete">%s Uninstall complete!</string>
    <string name="text_uninstall_failure">Uninstall failed!</string>
    <string name="uninstall_dialog_disable">Freeze/Disable</string>
    <string name="freeze_app_name">%s is Frozen</string>
    <string name="freeze_failure">Frozen Failure!</string>
    <string name="freeze_app_list">Freeze App List</string>
    <string name="freeze_app_list_sub">List of software frozen by installer</string>
    <string name="unfreeze_app">Unfreeze</string>
    <string name="unfreeze_app_complete">Unfreeze Complete!</string>
    <string name="unfreeze_app_failure">Unfreeze Failure!</string>
    <string name="use_shizuku">Shizuku Mode</string>
    <string name="use_shizuku_sub">Install with Shizuku</string>
    <string name="shizuku_permission_request">Please give Shizuku permission to this software</string>
    <string name="never_show">Never show</string>
    <string name="follow_system_night_mode">Auto dark</string>
    <string name="follow_system_night_mode_sub">Follow the system night mode</string>
    <string name="icebox_mode">Icebox Mode</string>
    <string name="icebox_mode_sub">Use refrigerator SDK to install</string>
    <string name="install_mode">Installation mode</string>
    <string name="install_mode_sub">Choose installation mode</string>
    <string name="text_shell">Shell</string>
    <string name="text_shizuku">Shizuku</string>
    <string name="text_icebox">Icebox</string>
    <string name="text_freeze_null">No record</string>
    <string name="crash_file_name">InstallerCrashLog.txt</string>
    <string name="exit_app">Exit</string>
    <string name="authorization_app">OK</string>
    <string name="app_get_perm_tips">The software needs to store read and write permissions, please grant permissions, \nand it is highly recommended that you uninstall or disable the system installer</string>
    <string name="crash_tips">The program is abnormal, please check the crash log under SDCard!</string>
    <string name="crash_feedback">Please send the log to the mailbox, or feedback in the private message of "CoolApk", personal email: Tokyonth@163.com</string>
    <string name="open_sys_pkg_failure">Open failed! Try to customize the package name in the settings</string>
    <array name="install_mode_arr">
        <item>Shell</item>
        <item>Shizuku</item>
        <item>Icebox</item>
    </array>
</resources>
