<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_marginRight="2dp"
    android:layout_marginLeft="2dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/btn_silently"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/install_silently"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/install"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>