<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@mipmap/ic_settings_bg"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_settings_author"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_settings_version"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_rv_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_card"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        app:cardBackgroundColor="@color/colorCard"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_settings_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="none"
            android:overScrollMode="never" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_apk_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_rv_settings"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorCard"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_apk_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_apk_cache"
                android:textColor="@color/colorTextSub" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_apk_cache"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp">

        <LinearLayout
            android:id="@+id/ll_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_margin="6dp"
                android:src="@drawable/ic_info_24px"
                app:tint="@color/colorSvg"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sys_pkg_tips"
                android:textColor="@color/colorTextSub" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_pkg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_box"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/colorCard"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:orientation="horizontal"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_input_sys_pkg"
                        android:textColor="@color/colorTextSub" />

                    <TextView
                        android:id="@+id/tv_pkg_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_settings_pkg"
                        android:textColor="@color/colorTextSub" />

                </LinearLayout>

                <com.tokyonth.installer.view.SwitchButton
                    android:id="@+id/cb_use_sys_pkg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</RelativeLayout>