<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG">

    <androidx.cardview.widget.CardView
        android:id="@+id/info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardBackgroundColor="@color/colorCard"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_round"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Version : "/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Author : TOKYONTH"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <include layout="@layout/settings_item"/>

    <RelativeLayout
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/colorSvg"
                android:src="@drawable/ic_tips"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sys_pkg_tips" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_box"
            android:layout_marginTop="8dp"
            android:id="@+id/card_pkg"
            app:cardBackgroundColor="@color/colorCard"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center|start"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_input_sys_pkg"/>

                    <TextView
                        android:id="@+id/tv_pkg_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="com.android.packageinstaller"/>

                </LinearLayout>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/cb_use_sys_pkg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>