<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:layout_marginHorizontal="16dp">

            <com.tokyonth.installer.view.InstallHeadView
                android:id="@+id/install_head_view"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_install_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingExtra="6dp"
                android:textIsSelectable="true"
                android:layout_marginHorizontal="4dp"
                app:layout_goneMarginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="?attr/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/install_head_view"
                tools:text="@string/app_name" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_source"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_install_msg">

                <LinearLayout
                    android:id="@+id/rl_to_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="4dp"
                    tools:ignore="UnusedAttribute">

                    <com.tokyonth.installer.view.CircleImageView
                        android:id="@+id/iv_apk_source"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tv_apk_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textAppearance="?attr/textAppearanceBodySmall"
                        android:textColor="?android:attr/textColorSecondary"
                        tools:text="@string/text_apk_source" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.tokyonth.installer.view.ContractListView
                android:id="@+id/cl_perm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_source" />

            <com.tokyonth.installer.view.ContractListView
                android:id="@+id/cl_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_perm" />

            <com.google.android.material.card.MaterialCardView
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_activity">

                <LinearLayout
                    android:id="@+id/ll_del"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="12dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/auto_delete_apk"
                        android:textStyle="bold" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/sb_auto_del"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        style="@style/Widget.Material3.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:contentInsetStart="0dp"
        app:hideOnScroll="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_silently"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/install_silently"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/text_cancel_installation"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_install"
        style="?attr/floatingActionButtonSmallStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        app:layout_anchor="@+id/bottom_app_bar"
        app:srcCompat="@drawable/ic_install" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
